# fast-api-project

./: README.md  pyproject.toml  requirements.txt
app/api/: route_auth.py  route_predict.py
app/core/: config.py  dependencies.py  security.py
