[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi==0.110.0",
    "joblib>=1.5.2",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "prometheus-fastapi-instrumentator==6.1.0",
    "pydantic>=2.12.4",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "redis==5.0.4",
    "scikit-learn==1.3.2",
    "uvicorn[standard]==0.29.0",
]
